fix wrong annotations

--- a/data/nichtlinear/processed/kapitel2_annotated.tex
+++ b/data/nichtlinear/processed/kapitel2_annotated.tex
@@ -235,7 +235,7 @@ Die \setref{Dimensionsformel}{label:dimension}~(\eqref{eq:dimensionsformel-ortho
 an~\cite{lorenz1992,beutelspacher2001}.
 
 \snippet{33}
-Der \setref{Zusammenhang}{label:general statement}~(\eqref{eq:dimensions-formel}) ist auch unter der Bezeichnung \textbf{\em \setref{Rangsatz}{label:Rangsatz}} bekannt.
+Der Zusammenhang~(\eqref{eq:dimensions-formel}) ist auch unter der Bezeichnung \textbf{\em Rangsatz} bekannt.
 
 \snippet{34i}
 
@@ -332,7 +332,7 @@ x_{1}\\
 x_{n}
 \end{array}\right)=\sum_{i=1}^{n}\omega_{i}x_{i}\label{eq:inneres-produkt}
 \end{equation}\eqnote{concepts:'natural pairing', 'covector', 'vector', 'element of sequence', 'integer number'}{statement:'natural pairing'('covector', 'vector') == $\sum_{i=1}^{n}$ ('element of sequence'('covector', 'integer number') * 'element of sequence'('vector', 'integer number'))}
-eine \textbf{\em \setref{natürliche Paarung}{label:natural pairing}}  $\left\langle \cdot,\cdot\right\rangle :({\mathbb{R}}^{n})^{*}\times{\mathbb{R}}^{n}\to{\mathbb{R}}$, die man auch als \textbf{\em duale Paarung}, \textbf{\em inneres Produkt} oder \textbf{\em \setref{Kontraktion}{label:contraction}} zwischen \setref{Kovektoren}{label:covector} und \setref{Vektoren}{label:vector} auffasst.
+eine \textbf{\em \setref{natürliche Paarung}{label:natural pairing}}  $\left\langle \cdot,\cdot\right\rangle :({\mathbb{R}}^{n})^{*}\times{\mathbb{R}}^{n}\to{\mathbb{R}}$, die man auch als \textbf{\em duale Paarung}, \textbf{\em inneres Produkt} oder \textbf{\em \setref{Kontraktion}{label:natural pairing}} zwischen \setref{Kovektoren}{label:covector} und \setref{Vektoren}{label:vector} auffasst.
 
 \snippet{47}
 Die \setref{Basis}{label:basis} $\left\{ e_{1}^{*},\ldots,e_{n}^{*}\right\} $ ist die zu $\left\{ e_{1},\ldots,e_{n}\right\} $ \setref{duale Basis}{label:dual basis}, d.\,h. es gilt
