last min changes

--- a/html/nl_latex_copy.tex
+++ b/html/nl_latex_copy.tex
@@ -445,4 +445,5 @@ Für verschiedene \setref{Punkte}{label:vector} $p,q\in\mathcal{M}$ erhält man 
 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 \bibliographystyle{abbrv}
 \bibliography{dynamic}
+\bibdata{dynamic}
 \end{document}
